--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Everything needed is in xblaze folder
 Uploaded by Tylerwatt12
 Coded by Moti Joesph
 Any questions please DO NOT contact moti@gamepe.com or moti@xf-mobile.com.
-Gamepe and xf-mobile assumes no responsibility over these files.
+Gamepe and xf-mobile assume no responsibility over these files.
